# geometrid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  default_14427989917131922131_0_20452.profraw
.cargo/: config.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml  test.yml
benches/: my_benchmark.rs
src/: absolute_coordinate.rs  center.rs  corner.rs  dynamic_tile.rs  dynamic_vector.rs  dynamic_vertex.rs  fixed_tile.rs  fixed_vertex.rs  flip_axes.rs  flippable.rs  grid.rs  has_center.rs  inners.rs  lib.rs  line_finder.rs  line_of_sight.rs  location.rs  point.rs  point_absolute.rs  point_relative.rs  polyomino.rs  primitive.rs  primitive_iterator.rs  primitives.rs  quarter_turns.rs  rectangle.rs  rectangle_iter.rs  relative_coordinate.rs  rotatable.rs  shape.rs  side.rs  tile.rs  tile_by_row_iter.rs  tile_grid.rs  tile_map.rs  tile_set.rs  tile_set256.rs  vector.rs  vertex.rs
src/snapshots/: geometrid__polyomino__tests__5 pentomino outline.snap  geometrid__polyomino__tests__5 pentomino rectangles.snap  geometrid__polyomino__tests__7 pentomino outline.snap  geometrid__polyomino__tests__7 pentomino rectangles.snap  geometrid__polyomino__tests__Domino outline.snap  geometrid__polyomino__tests__F pentomino outline.snap  geometrid__polyomino__tests__F pentomino rectangles.snap  geometrid__polyomino__tests__I pentomino outline.snap  geometrid__polyomino__tests__I pentomino rectangles.snap  geometrid__polyomino__tests__I tetromino outline.snap  geometrid__polyomino__tests__J pentomino outline.snap  geometrid__polyomino__tests__J pentomino rectangles.snap  geometrid__polyomino__tests__J tetromino outline.snap  geometrid__polyomino__tests__L pentomino outline.snap  geometrid__polyomino__tests__L pentomino rectangles.snap  geometrid__polyomino__tests__L tetromino outline.snap  geometrid__polyomino__tests__N pentomino outline.snap  geometrid__polyomino__tests__N pentomino rectangles.snap  geometrid__polyomino__tests__O tetromino outline.snap  geometrid__polyomino__tests__P pentomino outline.snap  geometrid__polyomino__tests__P pentomino rectangles.snap  geometrid__polyomino__tests__Q pentomino outline.snap  geometrid__polyomino__tests__Q pentomino rectangles.snap  geometrid__polyomino__tests__S pentomino outline.snap  geometrid__polyomino__tests__S pentomino rectangles.snap  geometrid__polyomino__tests__S tetromino outline.snap  geometrid__polyomino__tests__Square outline.snap  geometrid__polyomino__tests__T pentomino outline.snap  geometrid__polyomino__tests__T pentomino rectangles.snap  geometrid__polyomino__tests__T tetromino outline.snap  geometrid__polyomino__tests__U pentomino outline.snap  geometrid__polyomino__tests__U pentomino rectangles.snap  geometrid__polyomino__tests__V pentomino outline.snap  geometrid__polyomino__tests__V pentomino rectangles.snap  geometrid__polyomino__tests__W pentomino outline.snap  geometrid__polyomino__tests__W pentomino rectangles.snap  geometrid__polyomino__tests__X pentomino outline.snap  geometrid__polyomino__tests__X pentomino rectangles.snap  geometrid__polyomino__tests__Y pentomino outline.snap  geometrid__polyomino__tests__Y pentomino rectangles.snap  (+39 more)
