[package]
name = "geometrid"
version = "0.7.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "Everything you would ever need to work with constant sized square grids"
documentation = "https://docs.rs/geometrid"
repository = "https://github.com/wainwrightmark/geometrid"
readme = "README.md"
keywords = ["2d", "grid", "polyomino", "game", "puzzle"]
categories = [
]
license = "MIT"
edition = "2021"
exclude = [
]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
itertools = { version = "0.12", default-features = false }
strum = { version = "0.25", default-features = false, features = ["derive"] }
tinyvec = { version = "1.6.0", default-features = false, features = ["rustc_1_57"] }
serde = {version = "1.0", features=["derive"], optional = true}
serde_arrays = {version = "0.1.0", optional = true}
ethnum = {version= "1.5", optional= true}
const_panic = {version ="0.2.8", default-features = false}
glam = {version= "0.24", optional = true, default-features = false, features=["std"]}

[dev-dependencies]
version-sync = "0.9"
insta = {version= "1.34", features=["json"] }
itertools = { version = "0.12"}
serde_test = "1.0"
serde = {version = "1.0", features=["derive"]}
serde_arrays = {version = "0.1.0"}
primitive-types = {version= "0.12"}
ethnum = {version= "1.5", features=["serde"]}
glam = {version= "0.24"}

[features]
std = []
glam = ["std", "dep:glam"]
serde = ["dep:serde", "dep:serde_arrays", "ethnum?/serde"]
u256 = ["ethnum"]
